# memento-claude

./: .env.example  .gitattributes  .gitignore  2025-09-27-caveat-the-messages-below-were-generated-by-the-u.txt  2025-09-27-command-messagezenthinkdeeper-mcp-is-running.txt  ASISTANTO Notifications Creating Trigger 2.0.js  ASISTANTO Notifications Creating Trigger 2.1.js  ASISTANTO Notifications Creating Trigger 2.2.js  ASISTANTO Notifications Creating Trigger 2.4.js  ASISTANTO Notifications Helper 1.0.js  ASISTANTO Notifications Helper 1.1.js  ASISTANTO Notifications Helper 1.2.1.js  ASISTANTO Notifications Helper 1.2.js  ASISTANTO Notifications Prompt.md  ASISTANTO Telegram.js  Asistanto Telegram Groups field analysis.json  BACKLOG.md  CLAUDE-WORKFLOW.md  CLAUDE.md  Debug Config Test.js  Debug MementoConfig Size Test.js  Dochádzka Before Delete Cleanup.js  Dochádzka Group Summary 4.1.js  Dochádzka Group Summary 5.0.js  Dochádzka Group Summary 6.0.js  Dochádzka Individual Notifications 3.0.js  Dochádzka Knowledge Base.md  Dochádzka Notifications 2.5.js  Dochádzka Notifications.js  Dochádzka Orchestrator 1.0.js  Dochádzka Prepočet 7.js  Dochádzka Prepočet záznamu 2.0 - trigger.js  Dochádzka Prepočet záznamu 2.3 - trigger.js  Dochádzka Prepočet záznamu 2.4 - trigger.js  Dochádzka Prepočet záznamu 2.6 - trigger.js  Dochádzka Prepočet záznamu 3.1 - trigger.js  Dochádzka Prepočítať záznam 5.0.js  Dochádzka Prepočítať záznam 5.1.js  Dochádzka Sync Záväzkov.js  Dochádzka Sync záväzkov - trigger.js  (+127 more)
.doc/: links  (+3 more)
mcp-memento-server/: .gitignore  README.md  pyproject.toml  start-mcp.bat
mcp-memento-server/scripts/: convert_config.js
(+454 files in other folders)
